# Naive-Bayes

./: CMakeLists.txt
include/: classifier.h
src/: classifier.cpp  main.cpp
